# ebpfoolery

./: README.md  ebpfool  ebpfooling  ebpforge  ebpforged  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker-compose.yml  requirements.txt
ebpfoolery/: __init__.py
ebpfoolery/fingerprints/: HELP.md  ps4.fingerprint  win2016.fingerprint
ebpfoolery/personalities/: Makefile  portscan.c  ps4.c  win2016.c  xbox1.c
ebpforgery/: __init__.py  ippers.py  win2016.c
ebpforgery/fingerprints/: ps4.fingerprint  win2016.fingerprint  xbox.fingerprint  xbox1.fingerprint
ebpforgery/personalities/: ps4.c  win2016.c  xbox1.c
portscan/: ping.bpf.c  ping.py  portscan.bpf.c  portscan.py
tests/: common.py  conftest.py
tests/unit/: test_icmp.py  test_tcp.py  test_udp.py
tests/unit/ps4/: test_icmp.py  test_nmap.py  test_tcp.py  test_udp.py
tests/unit/xbox1/: test_icmp.py  test_nmap.py
