[tool.poetry]
name = "ebpfoolery"
version = "0.1.0"
description = "Ippers in ebpf"
authors = ["Jay", "Francois"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
scapy = "^2.5.0"
python-nmap = "^0.7.1"
pytest = "^7.4.3"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
